Closed Bug 1423832 Opened 7 years ago Closed 7 years ago

Crash in geckoservo::glue::Servo_StyleSet_NoteStyleSheetsChanged

Categories

(Core :: CSS Parsing and Computation, defect)

Unspecified
Windows 10
defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla59
Tracking Status
firefox-esr52 --- unaffected
firefox57 --- unaffected
firefox58 --- unaffected
firefox59 --- verified

People

(Reporter: Sylvestre, Assigned: emilio)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

Started to crash Tue 12-05 This bug was filed from the Socorro interface and is report bp-3ec3640d-2b6c-435d-8ceb-e961b0171207. ============================================================= Top 10 frames of crashing thread: 0 xul.dll geckoservo::glue::Servo_StyleSet_NoteStyleSheetsChanged servo/ports/geckolib/glue.rs:1212 1 xul.dll mozilla::StyleSheet::RuleAdded layout/style/StyleSheet.cpp:630 2 xul.dll mozilla::ServoStyleSheet::InsertRuleInternal layout/style/ServoStyleSheet.cpp:415 3 xul.dll mozilla::StyleSheet::InsertRule layout/style/StyleSheet.cpp:577 4 xul.dll mozilla::dom::CSSStyleSheetBinding::insertRule dom/bindings/CSSStyleSheetBinding.cpp:179 5 xul.dll mozilla::dom::GenericBindingMethod dom/bindings/BindingUtils.cpp:3042 6 xul.dll js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:473 7 xul.dll Interpret js/src/vm/Interpreter.cpp:3096 8 xul.dll js::RunScript js/src/vm/Interpreter.cpp:423 9 xul.dll js::InternalCallOrConstruct js/src/vm/Interpreter.cpp:495 =============================================================
In 59 this goes back to build id 20171130101246. Possible regression range: https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=3f6b9aaed8cd57954e0c960cde06d25228196456&tochange=ea747bb2ffb77d1fd62b5fa6217cbee15b73d31f. ni on emilio since there are a bunch of stylo merges in that changeset.
Flags: needinfo?(emilio)
Yup, I know about this one.
Assignee: nobody → emilio
Flags: needinfo?(emilio)
Comment on attachment 8935448 [details] Bug 1423832: Make sure to handle gracefully rule notifications when the styleset has been detached already. https://reviewboard.mozilla.org/r/206340/#review212150
Attachment #8935448 - Flags: review?(cam) → review+
Pushed by ecoal95@gmail.com: https://hg.mozilla.org/integration/autoland/rev/76fec1dbe96d Make sure to handle gracefully rule notifications when the styleset has been detached already. r=heycam
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla59
No more crashes in nightly 59 after the patch landed.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: