Bug 1423832: Make sure to handle gracefully rule notifications when the styleset has been detached already. r=heycam

MozReview-Commit-ID: xA8dYJX2P6